Modify home page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="index.jpg" alt="fruits" width="500px">
     <ul>
         <li><a href="recipes/lasagna.html"> Lasagna Recipe</a></li>
     </ul>
