--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Lasagna Recipe!</h1>
-    <img src="lasagna.jpeg">
+    <img src="lasagna.jpeg" width="500px">
 
     <h2>Description</h2>
     <p>
