--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
 </head>
+
 <body>
     <h1>Odin Recipes</h1>
     <img src="index.jpg" alt="fruits" width="500px">
@@ -13,4 +16,5 @@
         <li><a href="recipes/lasagna.html"> Lasagna Recipe</a></li>
     </ul>
 </body>
+
 </html>
